--- a/debian/rules
+++ b/debian/rules
@@ -41,12 +41,12 @@ pkg-gaise:
 		debian/gaise/usr/share/doc/gaise/copyright
 	cp debian/changelog \
 		debian/gaise/usr/share/doc/gaise/${CHANGELOG}
-	gzip -9 debian/gaise/usr/share/doc/gaise/${CHANGELOG}
+	gzip -9n debian/gaise/usr/share/doc/gaise/${CHANGELOG}
 	mkdir -p debian/gaise/usr/bin
 	mkdir -p debian/gaise/usr/lib/gaise
 	mkdir -p debian/gaise/usr/share/man/man1
 	$(MAKE) install prefix=debian/gaise/usr mandir=debian/gaise/usr/share/man
-	gzip -9 debian/gaise/usr/share/man/man*/*
+	gzip -9n debian/gaise/usr/share/man/man*/*
 	strip --strip-unneeded \
 		--remove-section=.comment \
 		debian/gaise/usr/lib/gaise/gaise.so
